samples/_failures_safe/1761594648_b6dec2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e4bc50.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_29e4bc50.c:142:26: error: expected ‘;’ at end of input
  142 |         for (int j = 0; j
      |                          ^
      |                          ;
./samples/SAFE/__tmp_29e4bc50.c:142:9: error: expected declaration or statement at end of input
  142 |         for (int j = 0; j
      |         ^~~
./samples/SAFE/__tmp_29e4bc50.c:142:9: error: expected declaration or statement at end of input
